# WebbThesis

./: .gitignore  .gitignorebackup  README.md  pyvenv.cfg  requirements.txt
AWS/: test.py
AWS/iac-microbenchmark/ec2/rust/: Cargo.toml
AWS/iac-microbenchmark/ec2/rust/aes256_decrypt/src/: main.rs
AWS/iac-microbenchmark/ec2/rust/aes256_encrypt/: Cargo.toml
AWS/iac-microbenchmark/ec2/rust/aes256_encrypt/src/: main.rs
AWS/iac-microbenchmark/ec2/rust/ecc256_sign/: Cargo.toml
AWS/iac-microbenchmark/ec2/rust/ecc256_sign/src/: main.rs
AWS/iac-microbenchmark/ec2/rust/ecc256_verify/: Cargo.toml
AWS/iac-microbenchmark/ec2/rust/rsa2048_encrypt/: Cargo.toml
AWS/iac-microbenchmark/ec2/rust/rsa3072_encrypt/: Cargo.toml
AWS/iac-microbenchmark/ec2/rust/rsa4096_decrypt/: Cargo.toml
AWS/iac-microbenchmark/ec2/rust/rsa4096_encrypt/: Cargo.toml
AWS/iac-microbenchmark/ec2/rust/sha256/: Cargo.toml
Azure/iac-microbenchmark/vmc/rust/: Cargo.toml
Azure/iac-microbenchmark/vmc/rust/ecc256_sign/: Cargo.toml
Azure/iac-microbenchmark/vmc/rust/ecc256_verify/: Cargo.toml
Azure/iac-microbenchmark/vmc/rust/ecc384_sign/: Cargo.toml
Azure/iac-microbenchmark/vmc/rust/ecc384_verify/: Cargo.toml
Azure/iac-microbenchmark/vmc/rust/rsa2048_decrypt/: Cargo.toml
Azure/iac-microbenchmark/vmc/rust/rsa2048_encrypt/: Cargo.toml
Azure/iac-microbenchmark/vmc/rust/rsa3072_decrypt/: Cargo.toml
Azure/iac-microbenchmark/vmc/rust/rsa3072_encrypt/: Cargo.toml
Azure/iac-microbenchmark/vmc/rust/rsa4096_decrypt/: Cargo.toml
Azure/iac-microbenchmark/vmc/rust/rsa4096_encrypt/: Cargo.toml
(+817 files in other folders)
