[workspace]
resolver="2"
members = [
    "ecc256_sign",
    "ecc256_verify",
    "ecc384_sign",
    "ecc384_verify",
    "rsa2048_encrypt",
    "rsa2048_decrypt",
    "rsa3072_encrypt",
    "rsa3072_decrypt",
    "rsa4096_encrypt",
    "rsa4096_decrypt"
]

[workspace.metadata]
target-dir = "x86"
#target-dir = "arm"
