[package]
name = "ecc256_verify"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1.0.210"
serde_json = "1.0.128"
base64 = "0.22.1"
azure_identity = "0.21.0"
azure_security_keyvault = "0.21.0"
anyhow = "1.0.95"
hex = "0.4.3"
